# spirits-of-brecile-godot

./: .gitignore  README.md
gdnative-lib/: Cargo.toml
gdnative-lib/src/: character.rs  client.rs  client_network.rs  input.rs  lib.rs  movement.rs  player.rs  server.rs
gdnative-lib/src/server/: player_manager.rs
gdnative-lib/tests/: driver_tests.rs  server.rs
gdnative-lib/tests/test_client/: mod.rs
gdnative-lib/tests/test_input/: mod.rs
gdnative-lib/tests/utils/: mod.rs
godot/: Main.tscn  project.godot
godot/addons/scatter/demos/: feature_list.tscn
godot/assets/: grass-blade.mtl  grass-blade.obj.import  rock1.mtl  rock1.obj.import  terrain1.mtl  terrain1.obj.import  terrain2.mtl  terrain2.obj.import  terrain3.mtl  terrain3.obj.import  terrain3_texture.png.import
godot/environment/: Environment1.tres  EnvironmentDay.tres  Scene1.tscn
godot/environment/grass_scene3/: mat_grass.tres  sha_grass.shader  sha_terrain.shader  sha_wind.shader
godot/environment/grass_scene4/: mat_grass.tres  sha_grass.shader
godot/libs/: gdnativelibrary.gdnlib  libgdnative_lib.dylib
godot/player/: CameraPivot.gd  ClientNetwork.gdns  InputHandler.gd  Player.gd  Player.gdns  Player.tscn  PlayerNetwork.gd
godot/server/: Server.gdns  Server.tscn  ServerNetwork.gd
scala/: build.sbt
scala/project/: plugins.sbt
