# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "gdnative-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
bytes = "1"
futures = "0.3"
gdnative = { version = "0.10", features = ["async"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json"] }
